Se agregan el archivo Jenkins y el de Sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=co.com.ceiba.estacionamiento.stid.rodriguez
+sonar.projectKey=com.ceiba.estacionamiento.stid.rodriguez
 sonar.projectName=Ceiba-Estacionamiento(stid.rodriguez)
 sonar.projectDesciption=Proyecto ADN-Ceiba con Gradle
 sonar.projectVersion=1.0
