--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,11 @@ dependencies {
 //conector j
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+//mockito
+	// https://mvnrepository.com/artifact/org.mockito/mockito-all
+	//testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+	testCompile 'org.mockito:mockito-all:1.10.19'
+	
 
 }
 
@@ -59,14 +64,3 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
-
-
-
-
-
-
-
-
-
-
-
