--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,4 +1,13 @@
-spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/dbparking
 spring.datasource.username=root
 spring.datasource.password=root
+
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+
